# rag-data-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
data/chromadb/: chroma.sqlite3
notebook/: RAG Data Pipeline.ipynb
rag_data_pipeline/: read_pdfs.py  split_pdfs.py  vector_store.py  vectorize_text.py
